修改了购买服务按钮在PC端的样式
Signed-off-by: lizeng <lizeng@dakarfleet.com>

--- a/src/less/common/header.less
+++ b/src/less/common/header.less
@@ -93,10 +93,10 @@
             margin-right: 3em;
         }
     }
-    .header-nav-button {
-        top: 0;
-        line-height: inherit;
-        padding: 0 3em;
-        border-radius: 0;
-    }
+    //.header-nav-button {
+    //    top: 0;
+    //    line-height: inherit;
+    //    padding: 0 3em;
+    //    border-radius: 0;
+    //}
 }
