修复火狐浏览器下<1200px屏幕尺寸的banner不显示问题
Signed-off-by: lizeng <lizeng@dakarfleet.com>

--- a/src/less/common/banner.less
+++ b/src/less/common/banner.less
@@ -26,16 +26,19 @@
     }
 
     &-pic {
-		display: block;
         width: percentage(445 / (750 - 15 * 2));
-        margin: 0;
-    	padding: 0;
-    	border: none;
-    	outline: 0;
 		//padding-bottom: percentage(325 / (750 - 15 * 2));
         //background-image: url(../../img/banner.png);
         //background-repeat: no-repeat;
         //background-size: contain;
+		img{
+			display: block;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            border: none;
+            outline: 0;
+		}
     }
 
     @desc-h4-fontsize: 14px;
